--- a/source/_static/custom.css
+++ b/source/_static/custom.css
@@ -46,3 +46,11 @@ html[data-theme=dark] {
   padding: 0;
   margin: 0;
 }
+
+#rat{
+  margin-bottom: 1.5em;
+}
+
+.sd-card-header{
+  font-weight: 550;
+}
